--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
 /* Global Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
     color: #333;
+}
+
+::-webkit-scrollbar {
+    background-color: #e32727;
+    width: 6px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: white;
+    height: 10px;
+    border-radius: 20px;
 }
 
 /* Header Styles */
@@ -50,6 +62,23 @@ h1{
     margin: 0;
 }
 
+.menu {
+    cursor: pointer;
+    display: none;
+}
+
+.menu div {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: .5rem 0;
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
 
 header nav ul {
     height: 100%;
@@ -145,4 +174,49 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+@media screen and (max-width:600px) {
+    .menu {
+        display: block;
+    }
+
+    header {
+        height: 10vh;
+    }
+
+    header nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 50%;
+        background-color: #aec8e6;
+        flex-direction: column;
+        justify-content: center;
+       
+        
+        /* transform: translateX(-100%); */
+        transform: scale(0);
+        transform-origin: top left;
+        transition: .3s ease-in-out;
+    }
+    header nav ul {
+        height: 100%;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin: 0;
+        padding: 0;
+    }
+    header nav a {
+        font-size: 20px;
+    }
+
+    header nav.active {
+        /* transform: translateX(0); */
+        transform: scale(1);
+        transition: .3s ease-in-out;
+    }
 }
