--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: sans-serif;
     margin: 0;
-    padding: 0;
+    padding-top: 15vh;
     color: #333;
 }
 
@@ -20,7 +20,9 @@ body {
 
 /* Header Styles */
 header {
-    margin: 16px;
+    position: fixed; /* Make the header fixed */
+    top: 0; /* Stick to the top */
+    left: 0;
     width: 100%;
     height: 15vh;
     background-color: rgb(233, 179, 233);
@@ -28,6 +30,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0.5%;
+    z-index: 1000; /* Ensure it stays above other content */
+    
 }
 
 header .container {
@@ -50,17 +54,19 @@ header .container {
     object-fit: cover;
     border-radius: 50%;
     display: flex;
-    
 }
 
-.name{
+.name {
     display: flex;
-    margin-right:0;
+    margin-right: 0;
 }
-h1{
+
+h1 {
     font-size: 24px;
     margin: 0;
 }
+
+
 
 .menu {
     cursor: pointer;
